--- a/src/components/calendar/index.css
+++ b/src/components/calendar/index.css
@@ -96,10 +96,10 @@
   cursor: none;
 }
 .data-item .block {
+  width: 100%;
   display: block;
   position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
+  left: 10px;
   top: 2px;
   color: #fff;
   font-size: 10px;
