--- a/src/style/animate.less
+++ b/src/style/animate.less
@@ -1,5 +1,5 @@
 /*
-  大屏数据化展示动画css3 less特效库
+  动画css3 less特效库
   vue transition 内置组件对于切换过渡的理解和定义
   v-enter：定义进入过渡的开始状态。在元素被插入之前生效，在元素被插入之后的下一帧移除。
   v-enter-active：定义进入过渡生效时的状态。在整个进入过渡的阶段中应用，在元素被插入之前生效，在过渡/动画完成之后移除。这个类可以被用来定义进入过渡的过程时间，延迟和曲线函数。
@@ -51,11 +51,3 @@
       box-shadow: 0 0 40px #009688, inset 0 0 10px rgba(0, 255, 0, 0.4), 0 1px 0 #009688;
   }
 }
-// @keyframes float {
-//   from {
-//     transform: translate(0, 0);
-//   }
-//   to {
-//     transform: translate(0, 20px);
-//   }
-// }
