--- a/src/components/calendar/index.css
+++ b/src/components/calendar/index.css
@@ -99,7 +99,7 @@
   width: 100%;
   display: block;
   position: absolute;
-  left: 10px;
+  text-align: center;
   top: 2px;
   color: #fff;
   font-size: 10px;
